# tests_definition

./: .cz.json  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  setup_env.sh
.devcontainer/: devcontainer.json
src/builder/: test_user_builder.py  user_account_builder.py
src/database/: in_memory_repository.py  json_repository.py  test_json_repository.py
src/package/: __init__.py  database.py  geometric_shape.py  user.py  user_account_builder.py  user_service.py
src/tests/: test_geometric_shape.py  test_user.py  test_user_account.py  test_user_service.py  user_account_test.py
src/user/: test_user_account.py  user_account.py  user_account_test.py
src/user_builder/: test_user_builder.py  user_account_builder.py
src/user_service/: test_user_account_service.py  user_account_service.py
