[project]
name = "tests_definition"
version = "0.1.0"
license = { text = "MIT License" }

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["if __name__ == .__main__.:"]
sort = "name"
omit = ["*/__init__.py", "*/tests/*"]
